[FIX] install license, install pkgconfig file to correct path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,4 +51,6 @@ install(FILES
     WSRoute.h
     DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/cndl)
 install(FILES ${CMAKE_CURRENT_BINARY_DIR}/cndl.pc
-    DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig)
+    DESTINATION ${CMAKE_INSTALL_PREFIX}/share/pkgconfig)
+install(FILES LICENSE
+    DESTINATION ${CMAKE_INSTALL_PREFIX}/share/licenses/${PROJECT_NAME})
